test/fail/stdop-arg-t.rnp
1.range('hello', 1);
---
 --> fail/stdop-arg-t.rnp:1:9
  |
1 | 1.range('hello', 1);
  |         ^^^^^^^ Expected number but got string
  |
